--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,3 +4,10 @@ services:
     container_name: nginx
     ports:
       - "80:80"
+    volumes:
+      - ./web:/var/www/html
+  wordpress:
+    build: requirements/wordpress
+    container_name: wordpress
+    volumes:
+      - ./web:/var/www/html
