--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,4 +2,6 @@ FROM debian:trixie-slim
 
 RUN apt update && apt upgrade -y && apt install -y nginx
 
+COPY default /etc/nginx/sites-available/.
+
 CMD ["nginx", "-g", "daemon off;"]
