--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,7 +1,10 @@
 FROM debian:trixie-slim
 
-RUN apt update && apt upgrade -y && apt install -y php-fpm
+RUN apt update && apt upgrade -y && apt install -y php-fpm php-mysqli curl
 
 COPY www.conf /etc/php/8.2/fpm/pool.d/.
+COPY script.sh .
 
-CMD ["php-fpm8.2", "-F"]
+RUN chmod +x script.sh
+
+CMD ["./script.sh"]
