fix: try to setup mariadb with .env

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,11 @@
-MYSQL_DATABASE=db_wordpress
-MYSQL_USER=example
+MYSQL_DATABASE=wordpress
+MYSQL_USER=wpuser
 MYSQL_PASSWORD=mysql_password
 MYSQL_ROOT_PASSWORD=mysql_root_password
-MYSQL_HOST=mariadb
+MYSQL_HOST=localhost
+
+DATABASE_URL=mariadb://wpuser:mysql_password@localhost:3306/wordpress
+# DATABASE_URL=mysql://root:mysql_root_password@localhost:3306/wordpress
 
 # Wordpress variables
 SITE_URL=example.42.fr
