feat: setup mariadb

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,65 +1,61 @@
 services:
   mariadb:
-    build: requirements/mariadb
     container_name: mariadb
-    image: mariadb:inception
-    restart: always
+    build: ./requirements/mariadb/.
+    networks:
+      - inception
+    env_file: .env
     ports:
       - "3306:3306"
+    expose:
+      - 3306
+    volumes:
+      - mariadb_volume:/var/lib/mysql
+    restart: always
+
+  nginx:
+    build: requirements/nginx
+    container_name: nginx
+    image: nginx:inception
+    restart: always
+    ports:
+      - "443:443"
     networks:
       - inception
     volumes:
-      - mariadb:/var/lib/mysql
+      - wordpress:/var/www/html
     env_file: .env
+    depends_on:
+      - wordpress
 
-  # nginx:
-  #   build: requirements/nginx
-  #   container_name: nginx
-  #   image: nginx:inception
-  #   restart: always
-  #   ports:
-  #     - "443:443"
-  #   networks:
-  #     - inception
-  #   volumes:
-  #     - wordpress:/var/www/html
-  #   env_file: .env
-  #   depends_on:
-  #     - wordpress
-
-  # wordpress:
-  #   build: requirements/wordpress
-  #   container_name: wordpress
-  #   image: wordpress:inception
-  #   restart: always
-  #   expose:
-  #     - "9000"
-  #   networks:
-  #     - inception
-  #   volumes:
-  #     - wordpress:/var/www/html
-  #   env_file: .env
-  #   depends_on:
-  #     - mariadb
-
-networks:
-  inception:
-    name: inception
-    driver: bridge
+  wordpress:
+    build: requirements/wordpress
+    container_name: wordpress
+    image: wordpress:inception
+    restart: always
+    expose:
+      - "9000"
+    networks:
+      - inception
+    volumes:
+      - wordpress_volume:/var/www/html
+    env_file: .env
+    depends_on:
+      - mariadb
 
 volumes:
-  wordpress:
-    name: wordpress
-    driver: local
+  mariadb_volume:
+    driver_opts:
+      o: bind
+      device: /Users/user/data/mariadb
+      type: none
+
+  wordpress_volume:
     driver_opts:
       type: bind
       o: bind
       device: /Users/user/data/wordpress
 
-  mariadb:
-    name: mariadb
-    driver: local
-    driver_opts:
-      type: bind
-      o: bind
-      device: /Users/user/data/mariadb
+networks:
+  inception:
+    driver: bridge
