--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,15 @@
+DOMAIN_NAME=localhost
+
+MYSQL_PASSWORD=mysql_password
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wpuser
-MYSQL_PASSWORD=mysql_password
 MYSQL_ROOT_PASSWORD=mysql_root_password
-MYSQL_HOST=localhost
 
-DATABASE_URL=mariadb://wpuser:mysql_password@localhost:3306/wordpress
-# DATABASE_URL=mysql://root:mysql_root_password@localhost:3306/wordpress
+DATABASE_URL="mariadb://wpuser:mysql_password@localhost:3306/wordpress"
+# DATABASE_URL="mysql://root:mysql_root_password@localhost:3306/wordpress"
 
 # Wordpress variables
-SITE_URL=example.42.fr
+SITE_URL=localhost
 SITE_TITLE=Inception
 
 WP_ADMIN_LOGIN=admin
