--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     networks:
       - inception
     volumes:
-      - wordpress:/var/www/html
+      - wordpress_volume:/var/www/html
     env_file: .env
     depends_on:
       - wordpress
