fix: wordpress installation and openssl

--- a/srcs/.env
+++ b/srcs/.env
@@ -12,10 +12,10 @@ DATABASE_URL="mariadb://wpuser:mysql_password@localhost:3306/wordpress"
 SITE_URL=localhost
 SITE_TITLE=Inception
 
-WP_ADMIN_LOGIN=admin
+WP_ADMIN=admin
+WP_ADMIN_EMAIL=admin@example.com
 WP_ADMIN_PASSWORD=admin_password
-WP_ADMIN_EMAIL=admin@student.42.fr
 
 WP_USER=example
-WP_PASSWORD=example_password 
-WP_EMAIL=example@student.42.fr
+WP_USER_EMAIL=example@example.com
+WP_USER_PASSWORD=example_password
