--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     container_name: wordpress
     image: wordpress:inception
     restart: always
+    ports:
+      - "9000:9000"
     expose:
       - "9000"
     networks:
