--- a/srcs/.env
+++ b/srcs/.env
@@ -12,9 +12,9 @@ DATABASE_URL="mariadb://wpuser:mysql_password@localhost:3306/wordpress"
 SITE_URL=localhost
 SITE_TITLE=Inception
 
-WP_ADMIN=admin
-WP_ADMIN_EMAIL=admin@example.com
-WP_ADMIN_PASSWORD=admin_password
+WP_ADMIN=superpower
+WP_ADMIN_EMAIL=superpower@example.com
+WP_ADMIN_PASSWORD=superpower_password
 
 WP_USER=example
 WP_USER_EMAIL=example@example.com
